@@ -1,5 +1,8 @@
 Version 2.01.07 - 
 ================================
+  clvmd fixes: make FDs close-on-exec
+               gulm unlocks VG & orphan locks at startup in case they are stale
+               gulm now unlocks VG & orphan locks if client dies.
 
 Version 2.01.06 - 1st March 2005
 ================================
